Fixed overflow y problem

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,5 +8,5 @@ body {
 
 .mat-app-background {
 	width: 100%;
-	overflow: hidden;
+	overflow-x: hidden;
 }
